# PortfolioSite

./: .env.example  .gitignore  README.md  docker-compose.yaml  eslint.config.js  package.json  pnpm-lock.yaml  turbo.json
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
apps/astro-site/: .env.example  CSS_APPLY_FIXES.md  README.md  SPOTIFY_ENHANCEMENTS.md  SPOTIFY_SETUP.md  astro.config.mjs  exchange-token.js  package.json  tailwind.config.mjs  tsconfig.json
apps/astro-site/src/: env.d.ts
apps/fastapi-svc/: .env.example  README.md  package.json  pyproject.toml
apps/fastapi-svc/app/: main.py
apps/fastapi-svc/static/: style.css
apps/fastapi-svc/tests/: __init__.py  test_main.py
apps/hono-api/: .eslintrc.js  README.md  package.json  tsconfig.json
apps/hono-api/src/: index.test.ts  index.ts
apps/next-dashboard/: README.md  drizzle.config.ts  package.json  tailwind.config.ts
apps/next-dashboard/drizzle/: schema.sql
apps/next-dashboard/src/: env.ts
docs/: ORGANIZATION_GUIDE.md  README_CLEANUP_SUMMARY.md
docs/astro-site/: FONT_HIERARCHY_VERIFICATION.md  FONT_IMPLEMENTATION.md
nova-portfolio/: README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
nova-portfolio/.github/workflows/: ci.yml
nova-portfolio/apps/astro-site/: .eslintrc.js  astro.config.mjs  package.json
nova-portfolio/apps/fastapi-svc/: Dockerfile  pyproject.toml
nova-portfolio/apps/fastapi-svc/app/: main.py
nova-portfolio/apps/fastapi-svc/templates/: index.html
nova-portfolio/apps/hono-api/: package.json
nova-portfolio/apps/next-dashboard/: .env.example  .eslintrc.js  next.config.js  tsconfig.json
(+76 files in other folders)
